tests/machine/x/ocaml/group_by_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_join.ml", line 36, characters 8-17:
36 |       ) customers;
             ^^^^^^^^^
Error: This expression has type record1 list
       but an expression was expected of type (string * Obj.t) list list
       Type record1 is not compatible with type (string * Obj.t) list 


Context (around line 36):
  34 |         let cur = try List.assoc key !__groups0 with Not_found -> [] in
  35 |         __groups0 := (key, o :: cur) :: List.remove_assoc key !__groups0);
  36 |       ) customers;
  37 |   ) orders;
  38 |   let __res0 = ref [] in
